added testing with Mocha

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/Artisandevware/portfolio-site.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Russell Hrycko",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Artisandevware/portfolio-site/issues"
